2003-02-19  Patrice Dumas <dumas@centre-cired.fr>
	* texi2html.pl, texi2html.init: T2H_DEFAULT_button_icon_img behaves
	better when it has some undef arguments
	the variables which may be redefined by the user are now global. 
	They are grouped in texi2html.init, and also in the Declaration in 
	texi2html.pl and sorted by class.
	new elements in %T2H_THISDOC for items which are global but shouldn't
	be redefined by the user (instead of $T2H_HOMEPAGE, $THISPROG...).
	t2h_Init_global has been removed and the code scattered according to
	the principles above
	other minor fixes

2003-02-18  Patrice Dumas <dumas@centre-cired.fr>
	* texi2html.pl: handle @verbatim, and @html differently. Added 
	push_until function which shift from a lines array and push to another 
	array until @end tag. Remove PROTECTTAG
	remove unneeded push of index entry for vtable or ftable which
	created 2 indices entry
	* Tests: added more tests

2003-02-13  Patrice Dumas <dumas@centre-cired.fr>

	* texi2html.pl: avoid using $_ in functions, as it is a global
	variable, use my variables instead
	* Tests/test.sh: if called with arguments, the test specified by 
	the arguments is the only one done
	* Tests/*: add Makefile.in, more subdirectories, synchronise
	reference files with changes in the code

2003-02-12  Patrice Dumas <dumas@centre-cired.fr>

	* texi2html.pl: add prototype for the functions ; remove
	& in front of functions ; remove the unusefull main()
	and Unprotect_texi functions
	* Tests/Makefile.am, Tests/test.sh: add regenerate target to 
	redo the reference files
	add test with tidy, remove cvs/rcs tags when doing diffs

2003-02-11  Patrice Dumas <dumas@centre-cired.fr>

	* Tests/Makefile.am, Tests/test.sh: changes to reflect change
	in directory name for the cvs manual from cvs to ccvs

2003-02-11  Patrice Dumas <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init: unused variables removed
	use_bibliography removed, lots of global variables made lexical.